<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
  android:background="@color/background">
  	<ScrollView
  		android:layout_width="fill_parent"
  		android:layout_height="fill_parent">
		  <LinearLayout
		  	android:layout_width="fill_parent"
		  	android:layout_height="fill_parent"
		  	android:id="@+id/reportForm"
		  	android:orientation="vertical">
		  		<TextView  
		    		android:layout_width="wrap_content" 
		    		android:layout_height="wrap_content" 
		    		android:text="@string/adressLabel"/>
		    	<LinearLayout
		    		android:orientation="horizontal"
		    		android:layout_width="fill_parent"
		    		android:layout_height="wrap_content"
		    		android:layout_weight="1">
			    	<EditText
			    		android:layout_width="fill_parent"
			    		android:layout_height="wrap_content"
			    		android:id="@+id/adressInput"
			    		android:layout_weight="0.20"/>
			    	<Button
			    		android:layout_width="fill_parent"
			    		android:layout_height="wrap_content"
			    		android:layout_weight="0.80"
			    		android:text="@string/mapBtnLabel"
			    		android:id="@+id/mapBtn"/>
		    	</LinearLayout>
		    	<Button
		    		android:layout_width="fill_parent"
		    		android:layout_height="wrap_content"
		    		android:text="@string/dateInput"
		    		android:id="@+id/dateBtn"/>
		    	<Button
		    		android:layout_width="fill_parent"
		    		android:layout_height="wrap_content"
		    		android:text="@string/timeStartInput"
		    		android:id="@+id/timeStartBtn"/>
		    	<Button
		    		android:layout_width="fill_parent"
		    		android:text="@string/timeEndInput"
		    		android:layout_height="wrap_content"
		    		android:id="@+id/timeEndBtn"/>
		    	<TextView  
		    		android:layout_width="wrap_content" 
		    		android:layout_height="wrap_content" 
		    		android:text="@string/regNumLabel"/>
		    	<EditText
		    		android:layout_width="fill_parent"
		    		android:layout_height="wrap_content"
		    		android:id="@+id/regNumInput"/>
		    	<TextView  
		    		android:layout_width="wrap_content" 
		    		android:layout_height="wrap_content" 
		    		android:text="@string/carTypeLabel"/>
		    	<se.fiktivalabbet.droidpark.carpicker.CarPickerView
					android:id="@+id/carTypeInput"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:layout_weight="1"/>
		    	<TextView  
		    		android:layout_width="wrap_content" 
		    		android:layout_height="wrap_content" 
		    		android:text="@string/carModelLabel"/>
		    	<EditText
		    		android:layout_width="fill_parent"
		    		android:layout_height="wrap_content"
		    		android:id="@+id/carModelInput"/>
		    	<TextView  
		    		android:layout_width="wrap_content" 
		    		android:layout_height="wrap_content" 
		    		android:text="@string/yearMakeLabel"/>
		    	<EditText
		    		android:layout_width="fill_parent"
		    		android:layout_height="wrap_content"
		    		android:id="@+id/yearMakeInput"
		    		android:inputType="numberDecimal"
		    		android:maxLength="4"/>
		    	<TextView  
		    		android:layout_width="wrap_content" 
		    		android:layout_height="wrap_content" 
		    		android:text="@string/errorCodeLabel"/>
		    	<Spinner
		    		android:prompt="@string/errorCode_prompt"
		    		android:id="@+id/errorCodeSpinner"
		    		android:layout_width="fill_parent"
		    		android:layout_height="wrap_content"/>
		    	<TextView  
		    		android:layout_width="wrap_content" 
		    		android:layout_height="wrap_content" 
		    		android:text="@string/feeLabel"/>
		    	<EditText
		    		android:layout_width="fill_parent"
		    		android:layout_height="wrap_content"
		    		android:id="@+id/feeInput"
		    		android:inputType="numberDecimal"
		    		android:maxLength="6"/>
		    	<TextView  
		    		android:layout_width="wrap_content" 
		    		android:layout_height="wrap_content" 
		    		android:text="@string/dutyNumLabel"/>
		    	<EditText
		    		android:layout_width="fill_parent"
		    		android:layout_height="wrap_content"
		    		android:id="@+id/dutyNumInput"
		    		android:inputType="numberDecimal"
		    		android:maxLength="4"/>
		    	<Button
		    		android:layout_width="fill_parent"
		    		android:layout_height="wrap_content"
		    		android:text="@string/sendFormLabel"
		    		android:id="@+id/sendFormBtn"/>
		  
</LinearLayout>
	  </ScrollView>
</LinearLayout>
