<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/background"
    >
	<TextView  
	    android:layout_width="wrap_content" 
	    android:layout_height="wrap_content" 
	    android:text="@string/welcome"
	    android:layout_gravity="center_horizontal"
	    android:textSize="14pt"
	    android:layout_marginBottom="25dip"
	    android:layout_marginTop="50dip"
	    />
	<LinearLayout
	android:id="@+id/buttons"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	android:layout_gravity="center_horizontal"
	android:orientation="vertical">
		<Button
		android:id="@+id/reportBtn"
		android:text="@string/reportBtnLabel"
		android:layout_width="fill_parent" 
	    android:layout_height="wrap_content"
	    android:paddingLeft="40dip"
	    android:paddingRight="40dip"
		/>
		<Button
		android:id="@+id/latestReportBtn"
		android:text="@string/latestReportBtnLabel"
		android:layout_width="fill_parent" 
	    android:layout_height="wrap_content"
	    android:paddingLeft="40dip"
	    android:paddingRight="40dip"
		/>
	</LinearLayout>
    
  
</LinearLayout>
